--- a/demo_web/package.json
+++ b/demo_web/package.json
@@ -9,9 +9,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@starknet-io/get-starknet-core": "^4.0.8",
+    "lucide-react": "^0.446.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "lucide-react": "^0.446.0"
+    "starknet": "^7.6.4"
   },
   "devDependencies": {
     "@types/react": "^18.3.12",
