--- a/demo_web/package.json
+++ b/demo_web/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "udemy-checkout-clone",
+  "name": "noudemy-checkout-clone",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -13,6 +13,7 @@
     "lucide-react": "^0.446.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^6.20.0",
     "starknet": "^7.6.4"
   },
   "devDependencies": {
